# our-discord

./: .gitignore  Makefile  pyproject.toml
src/: bot.py  main.py
src/cogs/: ping.py
src/config/: config.py
src/config/database/models/: user.py
src/config/database/models/base/: base.py
